# data_pipeline

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml  test.csv
src/data_pipeline/: main.py
src/data_pipeline/classes/data_extractor/: APIExtractor.py  DataExtractor.py  FileExtractor.py  MongoExtractor.py  SQLExtractor.py
src/data_pipeline/classes/data_loader/: DataLoader.py  MinIOLoader.py  S3Loader.py
tests/data_pipeline/classes/data_extractor/: test_DataExtractor.py  test_SQLExtractor.py
tests/data_pipeline/classes/data_loader/: test_DataLoader.py  test_MinIOLoader.py  test_S3Loader.py
